--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
@@ -285,7 +285,7 @@
           <img
             src="./assets/images/mainDesktop.png"
             alt="main"
-            class="w-full max-h-240 rounded-b-[3.5rem] hidden max-[1920px]:block max-[1440px]:hidden"
+            class="w-full max-h-240 rounded-b-[3.5rem] object-cover hidden max-[1920px]:block max-[1440px]:hidden"
           />
           <img
             src="./assets/images/mainTablet.png"
@@ -295,7 +295,7 @@
           <img
             src="./assets/images/mainTablet2.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] hidden max-h-315 max-[1024px]:block max-[768px]:hidden"
+            class="w-full rounded-b-[3.5rem] hidden max-h-315 object-cover max-[1024px]:block max-[768px]:hidden"
           />
         </div>
         <div class="swiper-slide">
@@ -307,7 +307,7 @@
           <img
             src="./assets/images/mainDesktop.png"
             alt="main"
-            class="w-full max-h-240 rounded-b-[3.5rem] hidden max-[1920px]:block max-[1440px]:hidden"
+            class="w-full max-h-240 rounded-b-[3.5rem] object-cover hidden max-[1920px]:block max-[1440px]:hidden"
           />
           <img
             src="./assets/images/mainTablet.png"
@@ -317,7 +317,7 @@
           <img
             src="./assets/images/mainTablet2.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-h-315 hidden max-[1024px]:block max-[768px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-315 hidden object-cover max-[1024px]:block max-[768px]:hidden"
           />
         </div>
         <div class="swiper-slide">
@@ -329,7 +329,7 @@
           <img
             src="./assets/images/mainDesktop.png"
             alt="main"
-            class="w-full max-h-240 rounded-b-[3.5rem] hidden max-[1920px]:block max-[1440px]:hidden"
+            class="w-full max-h-240 rounded-b-[3.5rem] object-cover hidden max-[1920px]:block max-[1440px]:hidden"
           />
           <img
             src="./assets/images/mainTablet.png"
@@ -339,7 +339,7 @@
           <img
             src="./assets/images/mainTablet2.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-h-315 hidden max-[1024px]:block max-[768px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-315 hidden object-cover max-[1024px]:block max-[768px]:hidden"
           />
         </div>
         <div class="swiper-slide">
@@ -351,7 +351,7 @@
           <img
             src="./assets/images/mainDesktop.png"
             alt="main"
-            class="w-full max-h-240 rounded-b-[3.5rem] hidden max-[1920px]:block max-[1440px]:hidden"
+            class="w-full max-h-240 rounded-b-[3.5rem] object-cover hidden max-[1920px]:block max-[1440px]:hidden"
           />
           <img
             src="./assets/images/mainTablet.png"
@@ -361,7 +361,7 @@
           <img
             src="./assets/images/mainTablet2.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-h-315 hidden max-[1024px]:block max-[768px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-315 object-cover hidden max-[1024px]:block max-[768px]:hidden"
           />
         </div>
         <div class="swiper-slide">
@@ -373,7 +373,7 @@
           <img
             src="./assets/images/mainDesktop.png"
             alt="main"
-            class="w-full max-h-240 rounded-b-[3.5rem] hidden max-[1920px]:block max-[1440px]:hidden"
+            class="w-full max-h-240 rounded-b-[3.5rem] object-cover hidden max-[1920px]:block max-[1440px]:hidden"
           />
           <img
             src="./assets/images/mainTablet.png"
@@ -383,7 +383,7 @@
           <img
             src="./assets/images/mainTablet2.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-h-315 hidden max-[1024px]:block max-[768px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-315 object-cover hidden max-[1024px]:block max-[768px]:hidden"
           />
         </div>
         <div class="swiper-slide">
@@ -395,7 +395,7 @@
           <img
             src="./assets/images/mainDesktop.png"
             alt="main"
-            class="w-full max-h-240 rounded-b-[3.5rem] hidden max-[1920px]:block max-[1440px]:hidden"
+            class="w-full max-h-240 rounded-b-[3.5rem] object-cover hidden max-[1920px]:block max-[1440px]:hidden"
           />
           <img
             src="./assets/images/mainTablet.png"
@@ -405,7 +405,7 @@
           <img
             src="./assets/images/mainTablet2.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-h-315 hidden max-[1024px]:block max-[768px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-315 object-cover hidden max-[1024px]:block max-[768px]:hidden"
           />
         </div>
       </div>
