--- a/pages/cargo_transportation.html
+++ b/pages/cargo_transportation.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
@@ -290,7 +290,7 @@
           <img
             src="../assets/images/mainDesktop.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-h-240 max-[1920px]:block hidden max-[1440px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-240 object-cover max-[1920px]:block hidden max-[1440px]:hidden"
           />
           <img
             src="../assets/images/mainTablet.png"
@@ -300,7 +300,7 @@
           <img
             src="../assets/images/mainTablet2.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-h-315 hidden max-[1024px]:block max-[768px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-315 object-cover hidden max-[1024px]:block max-[768px]:hidden"
           />
         </div>
         <div class="swiper-slide">
@@ -312,7 +312,7 @@
           <img
             src="../assets/images/mainDesktop.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-h-240 max-[1920px]:block hidden max-[1440px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-240 object-cover max-[1920px]:block hidden max-[1440px]:hidden"
           />
           <img
             src="../assets/images/mainTablet.png"
@@ -322,7 +322,7 @@
           <img
             src="../assets/images/mainTablet2.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-h-315 hidden max-[1024px]:block max-[768px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-315 object-cover hidden max-[1024px]:block max-[768px]:hidden"
           />
         </div>
         <div class="swiper-slide">
@@ -334,7 +334,7 @@
           <img
             src="../assets/images/mainDesktop.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-h-240 max-[1920px]:block hidden max-[1440px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-240 object-cover max-[1920px]:block hidden max-[1440px]:hidden"
           />
           <img
             src="../assets/images/mainTablet.png"
@@ -344,7 +344,7 @@
           <img
             src="../assets/images/mainTablet2.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-h-315 hidden max-[1024px]:block max-[768px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-315 object-cover hidden max-[1024px]:block max-[768px]:hidden"
           />
         </div>
         <div class="swiper-slide">
@@ -356,7 +356,7 @@
           <img
             src="../assets/images/mainDesktop.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-h-240 max-[1920px]:block hidden max-[1440px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-240 object-cover max-[1920px]:block hidden max-[1440px]:hidden"
           />
           <img
             src="../assets/images/mainTablet.png"
@@ -366,7 +366,7 @@
           <img
             src="../assets/images/mainTablet2.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-h-315 hidden max-[1024px]:block max-[768px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-315 object-cover hidden max-[1024px]:block max-[768px]:hidden"
           />
         </div>
         <div class="swiper-slide">
@@ -378,7 +378,7 @@
           <img
             src="../assets/images/mainDesktop.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-h-240 max-[1920px]:block hidden max-[1440px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-240 object-cover max-[1920px]:block hidden max-[1440px]:hidden"
           />
           <img
             src="../assets/images/mainTablet.png"
@@ -388,7 +388,7 @@
           <img
             src="../assets/images/mainTablet2.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-h-315 hidden max-[1024px]:block max-[768px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-315 object-cover hidden max-[1024px]:block max-[768px]:hidden"
           />
         </div>
         <div class="swiper-slide">
@@ -400,7 +400,7 @@
           <img
             src="../assets/images/mainDesktop.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-h-240 max-[1920px]:block hidden max-[1440px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-240 object-cover max-[1920px]:block hidden max-[1440px]:hidden"
           />
           <img
             src="../assets/images/mainTablet.png"
@@ -410,7 +410,7 @@
           <img
             src="../assets/images/mainTablet2.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-h-315 hidden max-[1024px]:block max-[768px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-315 object-cover hidden max-[1024px]:block max-[768px]:hidden"
           />
         </div>
       </div>
