--- a/index.html
+++ b/index.html
@@ -956,7 +956,7 @@
             <img
               src="./assets/images/service1.png"
               alt="service1"
-              class="absolute right-0 bottom-6 object-cover w-[580px] h-[368px] max-[2560px]:w-[500px] max-[2560px]:h-[330px] max-[1920px]:w-[430px] max-[1920px]:right-2 max-[1720px]:right-0 max-[1920px]:h-[300px] max-[1720px]:w-[400px] max-[1720px]:h-[260px] max-[1440px]:hidden"
+              class="absolute right-0 bottom-6 w-[580px] h-[368px] max-[1820px]:object-cover max-[2560px]:w-[520px] max-[2560px]:h-[330px] max-[1820px]:w-[430px] max-[1820px]:right-2 max-[1720px]:right-0 max-[1920px]:h-[300px] max-[1720px]:w-[400px] max-[1720px]:h-[260px] max-[1440px]:hidden"
             />
             <img
               src="./assets/images/service1Tablet.png"
@@ -992,7 +992,7 @@
             <img
               src="./assets/images/service2Desktop.png"
               alt="service1"
-              class="w-[511px] h-[420px] absolute bottom-0 right-0 max-[2560px]:block hidden max-[1920px]:w-[470px] max-[1920px]:h-[390px] max-[1720px]:w-[430px] max-[1720px]:h-[350px] max-[1440px]:w-[270px] max-[1440px]:h-[236px]"
+              class="w-[511px] h-[420px] absolute bottom-0 right-0 max-[2560px]:block hidden max-[1820px]:w-[470px] max-[1820px]:h-[390px] max-[1720px]:w-[430px] max-[1720px]:h-[350px] max-[1440px]:w-[270px] max-[1440px]:h-[236px]"
             />
             <img
               src="./assets/images/service2mobile.png"
@@ -1018,7 +1018,7 @@
             <img
               src="./assets/images/service3.png"
               alt="service1"
-              class="w-[575px] h-[398px] absolute bottom-0 right-0 max-[1440px]:hidden max-[2560px]:w-[500px] max-[2560px]:h-[350px] max-[2560px]:-bottom-6 max-[2560px]:-right-3 max-[1920px]:w-[460px] max-[1920px]:h-[330px] max-[1720px]:w-[420px] max-[1720px]:h-[290px]"
+              class="w-[575px] h-[398px] absolute bottom-0 right-0 max-[1440px]:hidden max-[2560px]:w-[500px] max-[2560px]:h-[350px] max-[2560px]:-bottom-6 max-[2560px]:-right-3 max-[1820px]:w-[460px] max-[1820px]:h-[330px] max-[1720px]:w-[420px] max-[1720px]:h-[290px]"
             />
             <img
               src="./assets/images/service3Tablet.png"
@@ -1049,7 +1049,7 @@
             <img
               src="./assets/images/service4Desktop.png"
               alt="service1"
-              class="w-[802px] h-[310px] hidden max-[2560px]:block max-[768px]:hidden absolute bottom-0 right-0 max-[1920px]:w-[710px] max-[1920px]:h-[295px] max-[1720px]:w-[630px] max-[1720px]:h-[250px] max-[1440px]:w-[443px] max-[1440px]:h-[175px] max-[1440px]:-right-5 max-[1024px]:hidden"
+              class="w-[802px] h-[310px] hidden max-[2560px]:block max-[768px]:hidden absolute bottom-0 right-0 max-[1820px]:w-[710px] max-[1820px]:h-[295px] max-[1720px]:w-[630px] max-[1720px]:h-[250px] max-[1440px]:w-[443px] max-[1440px]:h-[175px] max-[1440px]:-right-5 max-[1024px]:hidden"
             />
             <img
               src="./assets/images/service4.png"
@@ -1090,7 +1090,7 @@
             <img
               src="./assets/images/service5Desktop.png"
               alt="service1"
-              class="absolute bottom-0 right-0 w-[1020px] h-[476px] max-[2560px]:block hidden max-[1920px]:w-[1020px] max-[1920px]:h-[400px] max-[1720px]:w-[1020px] max-[1720px]:h-[376px] max-[1440px]:hidden"
+              class="absolute bottom-0 right-0 w-[1020px] h-[476px] max-[2560px]:block hidden max-[1820px]:w-[1020px] max-[1820px]:h-[400px] max-[1720px]:w-[1020px] max-[1720px]:h-[376px] max-[1440px]:hidden"
             />
             <img
               src="./assets/images/service5Tablet.png"
