--- a/pages/cargo_transportation.html
+++ b/pages/cargo_transportation.html
@@ -984,128 +984,151 @@
         </div>
       </section>
       <section
-        class="flex gap-10 max-[1440px]:gap-5 mb-23 pl-15 max-[1440px]:pl-10 relative max-[1440px]:mb-20 max-[768px]:mb-16 max-[1024px]:pl-10 max-[1024px]:gap-2 max-[768px]:px-4 max-[768px]:flex-col"
+        class="mb-23 px-15 max-[1440px]:px-10 relative max-[1440px]:mb-20 max-[768px]:mb-16 max-[1024px]:px-10 max-[1024px]:gap-2 max-[768px]:px-4"
       >
-        <div class="flex-1 flex flex-col justify-between">
+        <div
+          class="flex items-center gap-25 max-[1440px]:gap-16 max-[1024px]:gap-10 justify-between mb-14 max-[1440px]:mb-10 max-[768px]:mb-6"
+        >
+          <div class="flex-1">
+            <h2
+              class="text-[#3A3A3A] text-[3.5rem] space3 font-medium mb-8 max-[1440px]:text-5xl max-[1440px]:mb-6 max-[1024px]:text-[2rem] max-[768px]:mb-4"
+            >
+              О компании
+            </h2>
+            <p
+              class="text-[2rem] max-[1024px]:leading-6 text-[#3A3A3A] space3 font-medium mb-6 max-[1440px]:text-2xl max-[1440px]:mb-3 max-[1024px]:text-xl max-[768px]:mb-4"
+            >
+              Логистика для бизнеса <br class="max-[1440px]:block hidden" />
+              <span class="text-[#C83A36]">с надежным перевозчиком</span>
+            </p>
+            <p
+              class="text-xl mb-8 max-[1440px]:leading-4.5 text-[#3A3A3A] space3 max-[1440px]:text-sm max-[1440px]:mb-6 max-[768px]:mb-0"
+            >
+              “Грузовые линии” - надежный оператор грузоперевозок,
+              специализирующийся на логистических решениях с 2008 года, и берет
+              на себя весь спектр ваших транспортныз задач
+            </p>
+            <div class="flex items-center max-[768px]:hidden">
+              <a
+                href="/pages/contacts.html"
+                class="text-white text-xl gap-2 font-medium p-[18px] flex items-center bg-[#C83A36] rounded-xl"
+              >
+                Подробнее о компании
+                <img
+                  src="../assets/icons/chevron.svg"
+                  alt="chevron"
+                  class="-rotate-90"
+                />
+              </a>
+            </div>
+          </div>
+          <img
+            src="../assets/images/about_company.png"
+            alt="about"
+            class="object-cover w-225 h-130 max-[1440px]:hidden"
+          />
+          <img
+            src="../assets/images/about_company_tablet.png"
+            alt="about"
+            class="object-cover max-[768px]:hidden max-[1440px]:block hidden max-[1024px]:w-86 max-[1024px]:h-73.5 max-[1024px]:rounded-l-3xl max-[1024px]:rounded-r-xl"
+          />
+        </div>
+        <div
+          class="grid grid-cols-4 max-[1024px]:grid-cols-2 gap-3 max-[1440px]:gap-2"
+        >
           <div
-            class="flex items-center justify-between max-[1440px]:items-start"
+            class="flex-1 rounded-l-xl rounded-r-4xl max-[1440px]:rounded-r-3xl max-[768px]:rounded-r-xl bg-[#F2F5F7] p-8 max-[1440px]:p-4 max-[768px]:flex flex-col justify-between"
           >
             <div>
-              <h2 class="title max-[768px]:mb-4">О компании</h2>
-              <p
-                class="space3 hidden text-xl leading-7 mb-8 max-[768px]:block max-[768px]:text-sm max-[768px]:leading-4.5 max-[768px]:mb-6"
+              <div
+                class="flex items-center justify-center w-18 h-18 rounded-full bg-[#C83A36] mb-20 max-[1440px]:mb-11 max-[1024px]:mb-6 max-[768px]:mb-2 max-[1440px]:w-12 max-[1440px]:h-12 max-[768px]:w-6 max-[768px]:h-6"
               >
-                “Грузовые линии” - надежный оператор грузоперевозок,
-                специализирующийся на логистических решениях с 2008 года, и
-                берет на себя весь спектр ваших транспортныз задач
-              </p>
+                <img
+                  src="../assets/icons/check.svg"
+                  class="max-[1440px]:w-6 max-[1440px]:h-6 max-[768px]:w-3 max-[768px]:h-3"
+                />
+              </div>
+              <h3
+                class="text-[#3A3A3A] space-3 mb-4 font-medium text-[5rem] max-[1920px]:text-[4rem] leading-[100%] max-[1440px]:text-5xl max-[1440px]:mb-2 max-[1024px]:text-4xl max-[768px]:mb-3 max-[768px]:text-2xl"
+              >
+                3000+
+              </h3>
             </div>
+            <p class="text-[#3A3A3A] text-xl max-[1440px]:text-xs">
+              Заказов выполняем ежемесячно
+            </p>
           </div>
-          <div>
-            <div
-              class="flex gap-3 mb-3 max-[1440px]:gap-2 max-[1024px]:mb-2 shrink-0"
-            >
+          <div
+            class="flex-1 rounded-4xl max-[1440px]:rounded-3xl max-[1024px]:rounded-r-xl max-[768x]:rounded-l-xl bg-[#F2F5F7] p-8 max-[1440px]:p-4 max-[768px]:flex flex-col justify-between"
+          >
+            <div>
               <div
-                class="about_company_wrap radius_left max-[1025px]:pr-4! max-[1024px]:pr-0!"
+                class="flex items-center justify-center w-18 h-18 rounded-full bg-[#C83A36] mb-20 max-[1440px]:mb-11 max-[1024px]:mb-6 max-[768px]:mb-2 max-[1440px]:w-12 max-[1440px]:h-12 max-[768px]:w-6 max-[768px]:h-6"
               >
-                <div class="about_icon_wrap">
-                  <img
-                    src="../assets/icons/check.svg"
-                    alt="check"
-                    class="max-[1440px]:w-6 max-[1440px]:h-6 max-[768px]:w-3 max-[768px]:h-3"
-                  />
-                </div>
-                <p
-                  class="about_title max-[1025px]:text-[48px]! max-[1024px]:text-[2.25rem]! max-[768px]:text-2xl!"
-                >
-                  3000+
-                </p>
-                <p
-                  class="about_info max-[1025px]:text-[12px]! min-[1919px]:max-w-[200px]"
-                >
-                  Заказов выполняем ежемесячно
-                </p>
+                <img
+                  src="../assets/icons/location.svg"
+                  class="max-[1440px]:w-6 max-[1440px]:h-6 max-[768px]:w-3 max-[768px]:h-3"
+                />
               </div>
-              <div
-                class="about_company_wrap radius_right max-[1025px]:pr-4! max-[1024px]:pr-0!"
+              <h3
+                class="text-[#3A3A3A] space-3 mb-4 font-medium text-[5rem] max-[1920px]:text-[4rem] leading-[100%] max-[1440px]:text-5xl max-[1440px]:mb-2 max-[1024px]:text-4xl max-[768px]:mb-3 max-[768px]:text-2xl"
               >
-                <div class="about_icon_wrap">
-                  <img
-                    src="../assets/icons/location.svg"
-                    alt="check"
-                    class="max-[1440px]:w-6 max-[1440px]:h-6 max-[768px]:w-3 max-[768px]:h-3"
-                  />
-                </div>
-                <p
-                  class="about_title max-[1025px]:text-[48px]! max-[1024px]:text-[2.25rem]! max-[768px]:text-2xl!"
-                >
-                  1700+
-                </p>
-                <p class="about_info">
-                  Городов охватывает наша география перевозок
-                </p>
-              </div>
+                1700+
+              </h3>
             </div>
-            <div class="flex gap-3 max-[1024px]:gap-2">
+            <p class="text-[#3A3A3A] text-xl max-[1440px]:text-xs">
+              Городов охватывает наша география перевозок
+            </p>
+          </div>
+          <div
+            class="flex-1 rounded-4xl max-[1440px]:rounded-3xl max-[1024px]:rounded-l-xl max-[768x]:rounded-r-xl bg-[#F2F5F7] p-8 max-[1440px]:p-4 max-[768px]:flex flex-col justify-between"
+          >
+            <div>
               <div
-                class="about_company_wrap radius_left max-[1025px]:pr-4! max-[1024px]:pr-0!"
+                class="flex items-center justify-center w-18 h-18 rounded-full bg-[#C83A36] mb-20 max-[1440px]:mb-11 max-[1024px]:mb-6 max-[768px]:mb-2 max-[1440px]:w-12 max-[1440px]:h-12 max-[768px]:w-6 max-[768px]:h-6"
               >
-                <div class="about_icon_wrap">
-                  <img
-                    src="../assets/icons/rubl.svg"
-                    alt="check"
-                    class="max-[1440px]:w-6 max-[1440px]:h-6 max-[768px]:w-3 max-[768px]:h-3"
-                  />
-                </div>
-                <p
-                  class="about_title max-[1025px]:text-[48px]! max-[1024px]:text-[2.25rem]! max-[768px]:text-2xl!"
-                >
-                  15 млн ₽
-                </p>
-                <p class="about_info min-[1919px]:whitespace-nowrap">
-                  Страховое покрытие ответсвенности
-                </p>
+                <img
+                  src="../assets/icons/rubl.svg"
+                  class="max-[1440px]:w-6 max-[1440px]:h-6 max-[768px]:w-3 max-[768px]:h-3"
+                />
               </div>
-              <div
-                class="about_company_wrap radius_right max-[1025px]:pr-4! max-[1024px]:pr-0!"
+              <h3
+                class="text-[#3A3A3A] space-3 mb-4 font-medium text-[5rem] max-[1920px]:text-[4rem] leading-[100%] max-[1440px]:text-5xl max-[1440px]:mb-2 max-[1024px]:text-4xl max-[768px]:mb-3 max-[768px]:text-2xl"
               >
-                <div class="about_icon_wrap">
-                  <img
-                    src="../assets/icons/clock.svg"
-                    alt="check"
-                    class="max-[1440px]:w-6 max-[1440px]:h-6 max-[768px]:w-3 max-[768px]:h-3"
-                  />
-                </div>
-                <p
-                  class="about_title max-[1025px]:text-[48px]! max-[1024px]:text-[2.25rem]! max-[768px]:text-2xl!"
-                >
-                  17+ лет
-                </p>
-                <p class="about_info">на рынке грузоперевозок</p>
-              </div>
+                15 млн ₽
+              </h3>
             </div>
+            <p class="text-[#3A3A3A] text-xl max-[1440px]:text-xs">
+              Страховое покрытие ответсвенности
+            </p>
+          </div>
+          <div
+            class="flex-1 rounded-r-xl rounded-l-4xl max-[1440px]:rounded-l-3xl max-[768px]:rounded-l-xl bg-[#F2F5F7] p-8 max-[1440px]:p-4 max-[768px]:flex flex-col justify-between"
+          >
+            <div>
+              <div
+                class="flex items-center justify-center w-18 h-18 rounded-full bg-[#C83A36] mb-20 max-[1440px]:mb-11 max-[1024px]:mb-6 max-[768px]:mb-2 max-[1440px]:w-12 max-[1440px]:h-12 max-[768px]:w-6 max-[768px]:h-6"
+              >
+                <img
+                  src="../assets/icons/clock.svg"
+                  class="max-[1440px]:w-6 max-[1440px]:h-6 max-[768px]:w-3 max-[768px]:h-3"
+                />
+              </div>
+              <h3
+                class="text-[#3A3A3A] space-3 mb-4 font-medium text-[5rem] max-[1920px]:text-[4rem] leading-[100%] max-[1440px]:text-5xl max-[1440px]:mb-2 max-[1024px]:text-4xl max-[768px]:mb-7 max-[768px]:text-2xl"
+              >
+                17+ лет
+              </h3>
+            </div>
+            <p class="text-[#3A3A3A] text-xl max-[1440px]:text-xs">
+              на рынке грузоперевозок
+            </p>
           </div>
         </div>
-
-        <div
-          class="relative flex-1 max-[1024px]:max-w-[324px] max-[768px]:max-w-full"
-        >
-          <p class="font-medium text-2xl mb-6 space3 max-[1440px]:hidden">
-            Логистика для бизнеса
-            <span class="text-[#C83A36] leading-8"
-              >с надежным перевозчиком</span
-            >
-          </p>
-          <p
-            class="space3 text-xl leading-7 mb-8 max-w-148 max-[1440px]:max-w-79 max-[1024px]:max-w-full max-[1440px]:text-sm max-[1440px]:leading-4.5 max-[1024px]:mb-6 max-[768px]:hidden"
-          >
-            “Грузовые линии” - надежный оператор грузоперевозок,
-            специализирующийся на логистических решениях с 2008 года, и берет на
-            себя весь спектр ваших транспортныз задач
-          </p>
+        <div class="hidden max-[768px]:block mt-6">
           <a
-            href="./contacts.html"
-            class="w-[18rem] mb-7 max-[768px]:mb-6 h-16 max-[768px]:w-full max-[1440px]:text-base! max-[768px]:text-base! max-[1440px]:h-13 max-[1440px]:w-59.5 rounded-xl flex items-center justify-center gap-2.5 bg-[#C83A36] text-xl text-white"
+            href="/pages/contacts.html"
+            class="text-white p-4 justify-center gap-2.5 mb-6 flex items-center bg-[#C83A36] rounded-xl"
           >
             Подробнее о компании
             <img
@@ -1115,9 +1138,9 @@
             />
           </a>
           <img
-            src="../assets/images/about_company.png"
+            src="../assets/images/about_company_tablet.png"
             alt="about"
-            class="h-185 object-cover w-full max-[1920px]:h-160 max-[1440px]:w-full max-[1440px]:h-108 max-[1025px]:mt-11 max-[768px]:w-full max-[768px]:h-82 max-[768px]:rounded-3xl! max-[768px]:mt-0 max-[1440px]:mt-10 rounded-l-4xl max-[1024px]:mt-14 max-[1024px]:rounded-l-3xl max-[1024px]:h-102.5 max-[1024px]:w-81"
+            class="object-cover w-full h-82 rounded-3xl"
           />
         </div>
       </section>
