--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
           <img
             src="./assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] object-cover max-h-240 max-[1920px]:hidden"
+            class="w-full rounded-b-[3.5rem] object-cover max-[1920px]:hidden"
           />
           <img
             src="./assets/images/mainDesktop.png"
@@ -302,7 +302,7 @@
           <img
             src="./assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] object-cover max-h-240 max-[1920px]:hidden"
+            class="w-full rounded-b-[3.5rem] object-cover max-[1920px]:hidden"
           />
           <img
             src="./assets/images/mainDesktop.png"
@@ -324,7 +324,7 @@
           <img
             src="./assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] object-cover max-h-240 max-[1920px]:hidden"
+            class="w-full rounded-b-[3.5rem] object-cover max-[1920px]:hidden"
           />
           <img
             src="./assets/images/mainDesktop.png"
@@ -346,7 +346,7 @@
           <img
             src="./assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] object-cover max-h-240 max-[1920px]:hidden"
+            class="w-full rounded-b-[3.5rem] object-cover max-[1920px]:hidden"
           />
           <img
             src="./assets/images/mainDesktop.png"
@@ -368,7 +368,7 @@
           <img
             src="./assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] object-cover max-h-240 max-[1920px]:hidden"
+            class="w-full rounded-b-[3.5rem] object-cover max-[1920px]:hidden"
           />
           <img
             src="./assets/images/mainDesktop.png"
@@ -390,7 +390,7 @@
           <img
             src="./assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] object-cover max-h-240 max-[1920px]:hidden"
+            class="w-full rounded-b-[3.5rem] object-cover max-[1920px]:hidden"
           />
           <img
             src="./assets/images/mainDesktop.png"
@@ -849,7 +849,9 @@
               </h3>
             </div>
             <p class="text-[#3A3A3A] text-xl max-[1440px]:text-xs">
-              Заказов выполняем ежемесячно
+              Заказов выполняем
+              <br class="max-[1024px]:hidden max-[768px]:block" />
+              ежемесячно
             </p>
           </div>
           <div
