--- a/pages/cargo_transportation.html
+++ b/pages/cargo_transportation.html
@@ -285,7 +285,7 @@
           <img
             src="../assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-h-240 object-cover max-[1920px]:hidden"
+            class="w-full rounded-b-[3.5rem] object-cover max-[1920px]:hidden"
           />
           <img
             src="../assets/images/mainDesktop.png"
@@ -307,7 +307,7 @@
           <img
             src="../assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-h-240 object-cover max-[1920px]:hidden"
+            class="w-full rounded-b-[3.5rem] object-cover max-[1920px]:hidden"
           />
           <img
             src="../assets/images/mainDesktop.png"
@@ -329,7 +329,7 @@
           <img
             src="../assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-h-240 object-cover max-[1920px]:hidden"
+            class="w-full rounded-b-[3.5rem] object-cover max-[1920px]:hidden"
           />
           <img
             src="../assets/images/mainDesktop.png"
@@ -351,7 +351,7 @@
           <img
             src="../assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-h-240 object-cover max-[1920px]:hidden"
+            class="w-full rounded-b-[3.5rem] object-cover max-[1920px]:hidden"
           />
           <img
             src="../assets/images/mainDesktop.png"
@@ -373,7 +373,7 @@
           <img
             src="../assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-h-240 object-cover max-[1920px]:hidden"
+            class="w-full rounded-b-[3.5rem] object-cover max-[1920px]:hidden"
           />
           <img
             src="../assets/images/mainDesktop.png"
@@ -395,7 +395,7 @@
           <img
             src="../assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-h-240 object-cover max-[1920px]:hidden"
+            class="w-full rounded-b-[3.5rem] object-cover max-[1920px]:hidden"
           />
           <img
             src="../assets/images/mainDesktop.png"
@@ -1055,7 +1055,9 @@
               </h3>
             </div>
             <p class="text-[#3A3A3A] text-xl max-[1440px]:text-xs">
-              Заказов выполняем ежемесячно
+              Заказов выполняем
+              <br class="max-[1024px]:hidden max-[768px]:block" />
+              ежемесячно
             </p>
           </div>
           <div
