--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
       </div>
     </div>
     <main
-      class="page-container max-w-[1920px] max-[1440px]:max-w-full mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-full"
+      class="page-container max-w-[1920px] max-[1440px]:max-w-full mx-auto max-[1024px]:max-w-full max-[768px]:max-w-full"
     >
       <div class="mt-16 mb-10 px-4 max-[768px]:block hidden">
         <h2
