--- a/pages/blog.html
+++ b/pages/blog.html
@@ -273,7 +273,7 @@
       </div>
     </header>
     <main
-      class="max-w-[1920px] mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-full px-15 py-30 max-[1440px]:px-5 max-[1440px]:py-25 max-[768px]:px-4 max-[768px]:py-10"
+      class="max-w-[1920px] mx-auto max-[1024px]:max-w-full max-[768px]:max-w-full px-15 py-30 max-[1440px]:px-5 max-[1440px]:py-25 max-[768px]:px-4 max-[768px]:py-10"
     >
       <div class="flex gap-47 relative">
         <div class="max-[1440px]:hidden">
