--- a/pages/news.html
+++ b/pages/news.html
@@ -293,7 +293,7 @@
       />
     </div>
     <main
-      class="mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-full px-15 max-[1440px]:px-10 max-[1024px]:px-5"
+      class="mx-auto max-[1024px]:max-w-full max-[768px]:max-w-full px-15 max-[1440px]:px-10 max-[1024px]:px-5"
     >
       <h2 class="title mb-8">Новости</h2>
       <div class="flex gap-4 mb-12 overflow-auto max-[768px]:mb-10">
