--- a/pages/cargo_transportation.html
+++ b/pages/cargo_transportation.html
@@ -626,7 +626,7 @@
         </div>
       </div>
     </div>
-    <main class="mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-full">
+    <main class="mx-auto max-[1024px]:max-w-full max-[768px]:max-w-full">
       <div class="mt-16 mb-10 px-4 max-[768px]:block hidden">
         <h2
           class="text-[#3A3A3A] font-medium leading-[100%] space3 mb-4 text-2xl"
@@ -1418,7 +1418,7 @@
         </div>
       </section>
       <section
-        class="px-15 mb-44 max-[1440px]:mb-20 max-[768px]:px-4 max-[768px]:mb-14"
+        class="px-15 max-[1440px]:px-10 mb-44 max-[1440px]:mb-20 max-[768px]:px-4 max-[768px]:mb-14"
       >
         <div class="flex items-center justify-between mb-14 max-[768px]:mb-6">
           <h2 class="title">Отзывы</h2>
