--- a/pages/road_transportation.html
+++ b/pages/road_transportation.html
@@ -294,7 +294,7 @@
         class="absolute right-0 -top-16 max-[1440px]:-top-46 max-[1440px]:-right-48 max-[1024px]:-top-34 max-[1024px]:-right-55 max-[768px]:w-50 max-[768px]:h-35 max-[768px]:-right-17 max-[768px]:top-33"
       />
     </div>
-    <main class="mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-full">
+    <main class="mx-auto max-[1024px]:max-w-full max-[768px]:max-w-full">
       <section
         class="px-15 max-[1440px]:px-10 max-[1024px]:px-5 max-[768px]:px-4 mb-40 max-[1440px]:mb-20 max-[768px]:mb-16"
       >
@@ -857,7 +857,7 @@
         </div>
       </section>
       <section
-        class="px-15 mb-44 max-[1440px]:mb-20 max-[768px]:px-4 max-[768px]:mb-14"
+        class="px-15 max-[1440px]:px-10 mb-44 max-[1440px]:mb-20 max-[768px]:px-4 max-[768px]:mb-14"
       >
         <div class="flex items-center justify-between mb-14 max-[768px]:mb-6">
           <h2 class="title">Отзывы</h2>
