--- a/index.html
+++ b/index.html
@@ -1439,7 +1439,7 @@
         </div>
       </section>
       <section
-        class="px-15 mb-44 max-[1440px]:mb-20 max-[768px]:px-4 max-[768px]:mb-14"
+        class="px-15 mb-44 max-[1440px]:mb-20 max-[1440px]:px-10 max-[768px]:px-4 max-[768px]:mb-14"
       >
         <div class="flex items-center justify-between mb-14 max-[768px]:mb-6">
           <h2 class="title">Отзывы</h2>
