--- a/index.html
+++ b/index.html
@@ -414,29 +414,37 @@
       <div
         class="flex min-[1024px]:justify-between items-start h-full max-[1440px]:max-h-[auto] max-[1024px]:flex-col max-[1024px]:gap-10 max-[1024px]:items-center absolute w-full top-0 inset-0 z-1 px-15 max-[1440px]:px-10 pt-34 max-[1440px]:pt-32.5 max-[768px]:px-4 max-[768px]:pt-30"
       >
-        <div class="max-[1024px]:w-full">
-          <h1
-            class="text-white font-medium text-[4rem] max-[1440px]:text-5xl leading-[100%] mb-4 max-[768px]:text-2xl"
-          >
-            Август — месяц<br />
-            выгодной доставки
-          </h1>
-          <p class="text-white font-medium text-2xl max-[1440px]:text-sm mb-8">
-            Спецтарифы на междугородние перевозки:<br />
-            Самара, Екатеринбург — дешевле на 20%.
-          </p>
-          <a href="#form">
-            <button
-              class="w-76.5 h-19 max-[1440px]:h-13 max-[1024px]:h-19 max-[768px]:h-12 max-[768px]:w-55 max-[1440px]:w-60 max-[1440px]:text-base rounded-xl flex items-center justify-center gap-2.5 bg-[#C83A36] text-xl text-white"
+        <div
+          class="max-[1024px]:w-full max-[768px]:flex flex-col justify-between max-[768px]:h-full max-[768px]:pb-20"
+        >
+          <div>
+            <h1
+              class="text-white font-medium text-[4rem] max-[1440px]:text-5xl leading-[100%] mb-4 max-[768px]:text-2xl"
             >
-              Начать сотрудничество
-              <img
-                src="./assets/icons/chevron.svg"
-                alt="chevron"
-                class="-rotate-90"
-              />
-            </button>
-          </a>
+              Август — месяц<br />
+              выгодной доставки
+            </h1>
+            <p
+              class="text-white font-medium text-2xl max-[1440px]:text-sm mb-8"
+            >
+              Спецтарифы на междугородние перевозки:<br />
+              Самара, Екатеринбург — дешевле на 20%.
+            </p>
+          </div>
+          <div class="max-[768px]:flex justify-center">
+            <a href="#form">
+              <button
+                class="w-76.5 h-19 max-[1440px]:h-13 max-[1024px]:h-19 max-[768px]:h-12 max-[768px]:w-55 max-[1440px]:w-60 max-[1440px]:text-base rounded-xl flex items-center justify-center gap-2.5 bg-[#C83A36] text-xl text-white"
+              >
+                Начать сотрудничество
+                <img
+                  src="./assets/icons/chevron.svg"
+                  alt="chevron"
+                  class="-rotate-90"
+                />
+              </button>
+            </a>
+          </div>
         </div>
         <div
           class="w-[722px] max-[1440px]:max-h-[auto] overflow-auto bg-white p-8 rounded-3xl max-[1440px]:w-[504px] max-[1024px]:w-[728px] max-[1024px]:p-6 max-[768px]:hidden"
