--- a/pages/cargo_transportation.html
+++ b/pages/cargo_transportation.html
@@ -419,29 +419,37 @@
         class="flex min-[1024px]:justify-between items-start h-full max-[1440px]:max-h-[auto] gap-10 max-[1024px]:flex-col max-[1024px]:gap-10 max-[1024px]:items-center absolute w-full top-0 inset-0 z-1 px-15 max-[1440px]:px-10 pt-34 max-[1440px]:pt-32.5 max-[768px]:px-4 max-[768px]:pt-30"
       >
         <div
-          class="max-w-[793px] max-[1440px]:max-w-[431px] max-[1024px]:max-w-full"
+          class="max-w-[793px] max-[1440px]:max-w-[431px] max-[1024px]:max-w-full max-[768px]:flex flex-col justify-between max-[768px]:h-full max-[768px]:pb-20"
         >
-          <h1
-            class="text-white font-medium text-[4rem] max-[1440px]:text-5xl leading-[100%] mb-4 max-[768px]:text-2xl"
-          >
-            Грузоперевозки фурами в Новосибирске
-          </h1>
-          <p class="text-white font-medium text-2xl max-[1440px]:text-sm mb-8">
-            Перевозки фурами востребованы в самых разных сферах. Коммерческие
-            предприятия используют их для быстрой доставки оптовых партий, а
-            промышленные — для перевозки оборудования или сырья, что сокращает
-            затраты на логистику, а также ускоряет реализацию проектов
-          </p>
-          <button
-            class="w-76.5 h-19 max-[1440px]:h-13 max-[1024px]:h-19 max-[768px]:h-12 max-[768px]:w-55 max-[1440px]:w-60 max-[1440px]:text-base rounded-xl flex items-center justify-center gap-2.5 bg-[#C83A36] text-xl text-white"
-          >
-            Начать сотрудничество
-            <img
-              src="../assets/icons/chevron.svg"
-              alt="chevron"
-              class="-rotate-90"
-            />
-          </button>
+          <div>
+            <h1
+              class="text-white font-medium text-[4rem] max-[1440px]:text-5xl leading-[100%] mb-4 max-[768px]:text-2xl"
+            >
+              Грузоперевозки фурами в Новосибирске
+            </h1>
+            <p
+              class="text-white font-medium text-2xl max-[1440px]:text-sm mb-8"
+            >
+              Перевозки фурами востребованы в самых разных сферах. Коммерческие
+              предприятия используют их для быстрой доставки оптовых партий, а
+              промышленные — для перевозки оборудования или сырья, что сокращает
+              затраты на логистику, а также ускоряет реализацию проектов
+            </p>
+          </div>
+          <div class="max-[768px]:flex justify-center">
+            <a href="#form">
+              <button
+                class="w-76.5 h-19 max-[1440px]:h-13 max-[1024px]:h-19 max-[768px]:h-12 max-[768px]:w-55 max-[1440px]:w-60 max-[1440px]:text-base rounded-xl flex items-center justify-center gap-2.5 bg-[#C83A36] text-xl text-white"
+              >
+                Начать сотрудничество
+                <img
+                  src="../assets/icons/chevron.svg"
+                  alt="chevron"
+                  class="-rotate-90"
+                />
+              </button>
+            </a>
+          </div>
         </div>
         <div
           class="w-[722px] shrink-0 max-[1440px]:max-h-[auto] overflow-auto bg-white p-8 rounded-3xl max-[1440px]:w-[504px] max-[1024px]:w-[728px] max-[1024px]:p-6 max-[768px]:hidden"
@@ -1368,6 +1376,7 @@
         </div>
       </section>
       <section
+        id="form"
         class="rounded-[56px] max-[768px]:mb-16 max-[768px]:px-4 max-[1024px]:rounded-3xl max-[768px]:gap-6 max-[768px]:flex-col bg-[#3A3A3A] contact_section px-15 py-40 flex justify-between mb-30 max-[1440px]:mb-20 max-[1440px]:p-10"
       >
         <div class="flex flex-col justify-between z-10 max-[768px]:gap-4">
