--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
           <div class="max-[768px]:flex justify-center">
             <a href="#form">
               <button
-                class="w-76.5 h-19 max-[1440px]:h-13 max-[1024px]:h-19 max-[768px]:h-12 max-[768px]:w-55 max-[1440px]:w-60 max-[1024px]:w-76.5 max-[1440px]:text-base max-[1024px]:text-xl! rounded-xl flex items-center justify-center gap-2.5 bg-[#C83A36] text-xl text-white"
+                class="w-76.5 h-19 max-[1440px]:h-13 max-[1024px]:h-19 max-[768px]:h-12 max-[768px]:w-55 max-[1440px]:w-60 max-[1024px]:w-76.5 max-[1440px]:text-base max-[1024px]:text-xl! max-[768px]:text-sm! rounded-xl flex items-center justify-center gap-2.5 bg-[#C83A36] text-xl text-white"
               >
                 Начать сотрудничество
                 <img
