--- a/pages/cargo_transportation.html
+++ b/pages/cargo_transportation.html
@@ -439,7 +439,7 @@
           <div class="max-[768px]:flex justify-center">
             <a href="#form">
               <button
-                class="w-76.5 h-19 max-[1440px]:h-13 max-[1024px]:h-19 max-[768px]:h-12 max-[768px]:w-55 max-[1024px]:w-76.5 max-[1024px]:text-xl! max-[1440px]:text-base rounded-xl flex items-center justify-center gap-2.5 bg-[#C83A36] text-xl text-white"
+                class="w-76.5 h-19 max-[1440px]:h-13 max-[1024px]:h-19 max-[768px]:h-12 max-[768px]:w-55 max-[1024px]:w-76.5 max-[1024px]:text-xl! max-[768px]:text-sm! max-[1440px]:text-base rounded-xl flex items-center justify-center gap-2.5 bg-[#C83A36] text-xl text-white"
               >
                 Начать сотрудничество
                 <img
